[gd_scene load_steps=4 format=3 uid="uid://82dpan04jpj2"]

[ext_resource type="Script" uid="uid://bnlnd7kvbijjj" path="res://scenes/main_game/water_progress_container.gd" id="1_ti1a6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3kwu"]
bg_color = Color(0.05, 0.05, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2, 0.4, 0.8, 0.9)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0.2, 0.4, 0.8, 0.9)
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mijjq"]
bg_color = Color(0.2, 0.6, 1, 0.8)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[node name="WaterProgressContainer" type="Panel"]
offset_left = 200.0
offset_top = 20.0
offset_right = 1000.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i3kwu")
script = ExtResource("1_ti1a6")

[node name="WaterProgress" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 9.0
offset_bottom = 52.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mijjq")

[node name="ProgressText" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 18
text = "Round 1 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RippleTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="RippleTimer" to="." method="_on_ripple_timer_timeout"]
